tests/invalid/union-inconsistent-variants.nyx
union Result[T]:
    success: T
   failure: string
    pending: bool
